# CompMath

./: .gitignore  CMakeLists.txt
CompMath/: CMakeLists.txt
CompMath/Integration/: Integration.hpp
CompMath/Interpolation/: NewtonInterpolation.hpp  SplineInterpolator.h
CompMath/SolversNonlinearEquation/: Newton.hpp  SimpleIteration.h
Integration/: Integration.cpp  Integration.hpp
Interpolation/: NewtonInterpolation.hpp  SplineInterpolator.h
LinAlg/: CMakeLists.txt
LinAlg/ThreeDiagonal/: ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp  ThreeDiagonalSolver.hpp
LinAlg/dense_matrix/: Densematrix.hpp
LinAlg/vectors/: Vectors.hpp
ThreeDiagonal/: ThreeDiagonalSolver.cpp
first_assignment/: 4_12_8b.cpp  4_9_32.cpp  CMakeLists.txt  FirstTextTaks.cpp  SecondTask.cpp  kv.cpp
lab1/: CMakeLists.txt  NewtonInterpolation.hpp  SplineInterpolator.h  main.cpp
