add_executable(firstTextTask FirstTextTaks.cpp)
add_executable(secondTask SecondTask.cpp)
add_executable(4_9_32 4_9_32.cpp)
add_executable(4_12_8b 4_12_8b.cpp)
add_executable(kv kv.cpp)
target_link_libraries(kv linalg compmath)
target_link_libraries(4_9_32 linalg compmath)
target_link_libraries(4_12_8b linalg compmath)
target_link_libraries(secondTask linalg compmath)
target_link_libraries(firstTextTask linalg compmath)
include_directories(..)